--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,7 @@ nav > ul > li .dropdown__title {
   transform-origin: top center;
   opacity: 0.3;
   transition: 280ms all ease-out;
+  transition: 280ms all 120ms ease-out;
 }
 
 .dropdown:hover .dropdown__menu,
@@ -78,4 +79,16 @@ nav > ul > li .dropdown__title {
   opacity: 1;
   transform: rotateX(0) translateX(-50%);
   visibility: visible;
+}
+
+.dropdown .dropdown__title {
+  display: inline-flex;
+  align-items: center;
+}
+.dropdown .dropdown__title:after {
+  content: "";
+  border: 0.35rem solid transparent;
+  border-top-color: rgba(0, 0, 255, 0.45);
+  margin-left: 0.25em;
+  transform: translateY(0.15em);
 }
